--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
 on: [push, pull_request]
 jobs:
-  runs-on: windows-latest
+  windows:
+    runs-on: windows-latest
+    name: Windows
   build:
     env:
       buildDir: '${{ github.workspace }}/build/'
